fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -45,10 +45,9 @@ body{
     margin: auto;
     border-radius: 10px;
     color: #fffefe;  
-    opacity: 0.8;
+    opacity: 0.9;
     padding: 20px;
     background-color: #060606;
-    margin-bottom: auto;
 }
     
 h3{
